[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_panic = { workspace = true }
bevy_gearbox_editor = { workspace = true }
bevy_egui = { workspace = true }
bevy_gearbox = { workspace = true }
bevy_asset_loader = { workspace = true }
factory_game_assets_handler = { workspace = true }

[features]
default = []
dev = ["bevy/dynamic_linking"]
